* Wrap/break long filenames * Make filebrowser wider * Other small css fixes to allow longer filenames

--- a/deposit/static/deposit/css/deposit.css
+++ b/deposit/static/deposit/css/deposit.css
@@ -1,4 +1,19 @@
 
+/* ** File browser size **
+Make the file browser wider to allow longer filenames.
+If container-fluid is used (for a full-width file browser), use the right padding on laptop screens */
+@media (min-width: 1400px){
+    .container, .container-sm, .container-md, .container-lg, .container-xl {
+        max-width: 1390px;
+    }
+}
+
+@media (min-width: 769px) {
+    .container-fluid .page {
+        padding: 0 100px;
+    }
+}
+
 .tab-content {
     margin-top:10px;
 }
@@ -18,6 +33,7 @@
 nav .breadcrumb {
     background-color: transparent;
     margin-bottom: 0;
+    padding-left: 10px;
 }
 
 .action-list li {
@@ -45,7 +61,7 @@ nav .breadcrumb {
     margin-bottom: 5px;
 }
 .upload-filename {
-    word-wrap: break-word;
+    word-break: break-all;
     display: inline-block;
  }
 
@@ -59,24 +75,9 @@ nav .breadcrumb {
     display:none;
 }
 
-
-
-/* cards clickable
-Needs save on metadata form too (react)
-.card > a,
-.card > a:hover,
-.card > a:active
- {
-    display: block;
-    text-decoration: none;
-    cursor: pointer;
-}
-*/
-
 .card-title {
     margin: 4px 0;
 }
-
 
 
 /* Data table */
@@ -86,18 +87,16 @@ Needs save on metadata form too (react)
 }
 
 #file-browser tr > :nth-child(1) {
-    min-width: 40%;
+    min-width: 60%;
+    word-break:break-all;
 }
-
 #file-browser tr > :nth-child(2) {
-    max-width: 30px;
     text-align: right;
 }
 #file-browser tr > :nth-child(3) {
-    max-width: 40px;
 }
 #file-browser tr > :nth-child(4) {
-    max-width: 10px;
+    max-width: 90px;
     text-align: right;
 }
 #file-browser .fa {
@@ -117,6 +116,12 @@ Needs save on metadata form too (react)
     font-size: 19px;
     vertical-align: bottom;
 }
+
+#file-browser > tbody > tr > td,
+#file-browser .dropdown a {
+    font-size: 0.9rem;
+}
+
 
 #file-browser th {
     background-color: #dcdcdc;
